@@ -23,6 +23,8 @@ Changes for 1.9.0
 
 Changes for 1.8.4rc3
 
+ - [ZBX-3184] fixed 1000 vs. 1024 multipliers for bits, bytes, and other units in notification macros (asaveljevs)
+ - [ZBX-3184] fixed negative values with unit suffixes in notification macros (asaveljevs)
  - [ZBX-3211] updated Ukrainian translation; renamed locale to uk_ua; thanks to zalex_ua (Richlv)
  - [ZBX-3085] fixed possible stop to send data from proxy after shutdown of MySQL server (Sasha)
  - [ZBX-3218] server and proxy are no longer built with libcurl by default (asaveljevs)
@@ -32,7 +34,7 @@ Changes for 1.8.4rc3
  - [ZBX-3207] fixed possibility to click on web items in trigger expressions (Vedmak)
  - [ZBX-3205] fixed incorrect event duration count (Aly)
  - [ZBX-3021] fixed possibility to create dependency between host and template triggers (Vedmak)
- - [ZBX-3183] fixed maintenenace permisson issue (KB)
+ - [ZBX-3183] fixed maintenance permission issue (KB)
  - [ZBX-3183] added screenname GET parameter support to screens.php (KB)
  - [ZBX-2639] added net.if.total and net.if.list items in the help_items table (Sasha)
  - [ZBX-1600] added support of value mapping for {ITEM.VALUE} macro in notifications (Sasha)
